--- a/src/pages/Gallery/Gallery.css
+++ b/src/pages/Gallery/Gallery.css
@@ -242,6 +242,7 @@
 @media (max-width: 768px) {
   .gallery-main {
     padding: 0.8rem 0.5rem;
+    margin: 2rem auto 0 auto;
   }
 
   .gallery-header h1 {
