--- a/src/pages/News/News.css
+++ b/src/pages/News/News.css
@@ -10,7 +10,7 @@
 }
 
 .news-title {
-  font-size: 2.6rem;
+  font-size: 3rem;
   font-weight: 700;
   text-align: center;
   margin-bottom: 48px;
@@ -222,6 +222,10 @@
    MOBILE
 ========================= */
 @media (max-width: 768px) {
+
+  .news-title {
+  font-size: 2rem;
+}
   .news-card {
     flex-direction: column;
     height: auto;
